--- a/assests/css/styles.css
+++ b/assests/css/styles.css
@@ -1,112 +1,132 @@
 @import url("https://fonts.googleapis.com/css2?family=Carter+One&family=Montserrat:wght@100..900&display=swap");
 
-:root{
-    --header-height:3.5rem;
-
-    --first-color: hsl(353,93%,50%);
-    --first-color-alt:hsl(353,93%,46%);
-    --first-color-dark:hsl(353,50%,15%);
-    --title-color:hsl(353,48%,12%);
-    --text-color:hsl(353,16%,32%);
-    --text-color-light:hsl(353,16%,48%);
-    --white-color: hsl(24,86%,88%);
-    --body-color:hsl(24,86%,88%);
+:root {
+    --header-height: 3.5rem;
+  
+    /*========== Colors ==========*/
+    /*Color mode HSL(hue, saturation, lightness)*/
+    --first-color: hsl(353, 93%, 50%);
+    --first-color-alt: hsl(353, 93%, 46%);
+    --first-color-dark: hsl(353, 50%, 15%);
+    --title-color: hsl(353, 48%, 12%);
+    --text-color: hsl(353, 16%, 32%);
+    --text-color-light: hsl(353, 16%, 48%);
+    --white-color: hsl(24, 86%, 90%);
+    --body-color: hsl(24, 86%, 88%);
     --container-color: hsl(24, 86%, 92%);
-    --shadow-small-img:drop-shadow(0 4px 16px hsla(353,100%,8%,.2));
-    --shadow-big-img:drop-shadow(0 8px 24px hsla(353,100%,8%,.2));
-
-
-    --body-font:"Montserrat",sans-serif;
-    --second-font:"Carter One",system-ui;
-    --biggest-font-size:2.5rem;
-    --biggest-font-size:1.5rem;
-    --h1-font-size:1.5rem;
-    --h2-font-size:1.25rem;
-    --h3-font-size:1rem;
-    --normal-font-size:.938rem;
-    --small-font-size:.813rem;
+    --shadow-small-img: drop-shadow(0 4px 16px hsla(353, 100%, 8%, .2));
+    --shadow-big-img: drop-shadow(0 8px 24px hsla(353, 100%, 8%, .2));
+  
+    /*========== Font and typography ==========*/
+    /*.5rem = 8px | 1rem = 16px ...*/
+    --body-font: "Montserrat", sans-serif;
+    --second-font: "Carter One", system-ui;
+    --biggest-font-size: 2.5rem;
+    --bigger-font-size: 1.5rem;
+    --h1-font-size: 1.5rem;
+    --h2-font-size: 1.25rem;
+    --h3-font-size: 1rem;
+    --normal-font-size: .938rem;
+    --small-font-size: .813rem;
     --smaller-font-size: .75rem;
-    
-    --font-regular:400;
-    --font-medium:500;
-    --font-semi-bold:600;
-
-    --z-tooltip:10;
-    --z-fixed:100;
-}
-
-@media screen and (min-width: 1150px){
-    :root{
-        --biggest-font-size:4.25rem;
-        --bigger-font-size:2.5rem;
-        --h1-font-size:2.25rem;
-        --h2-font-size:1.25rem;
-        --normal-font-size:1rem;
-        --small-font-size:.875rem;
-        --smaller-font-size:.813rem;
+  
+    /*========== Font weight ==========*/
+    --font-regular: 400;
+    --font-medium: 500;
+    --font-semi-bold: 600;
+  
+    /*========== z index ==========*/
+    --z-tooltip: 10;
+    --z-fixed: 100;
+  }
+  
+  /*========== Responsive typography ==========*/
+  @media screen and (min-width: 1150px) {
+    :root {
+      --biggest-font-size: 4.25rem;
+      --bigger-font-size: 2.5rem;
+      --h1-font-size: 2.25rem;
+      --h2-font-size: 1.5rem;
+      --h3-font-size: 1.25rem;
+      --normal-font-size: 1rem;
+      --small-font-size: .875rem;
+      --smaller-font-size: .813rem;
     }
-}
-
-*{
+  }
+  
+  /*=============== BASE ===============*/
+  * {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
-}
-
-html{
+  }
+  
+  html {
     scroll-behavior: smooth;
-}
-
-input,
-button,
-body{
+  }
+  
+  input,
+  button,
+  body {
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
-}
-
-input,
-button{
-    outline:none;
+  }
+  
+  body {
+    background-color: var(--body-color);
+    color: var(--text-color);
+  }
+  
+  input,
+  button {
+    outline: none;
     border: none;
-}
-
-h1,h2,h3,h4{
-    color:var(--title-color);
+  }
+  
+  h1, h2, h3, h4 {
+    color: var(--title-color);
     font-weight: var(--font-regular);
     font-family: var(--second-font);
-    line-height:120%;
-}
-
-ul{
+    line-height: 120%;
+  }
+  
+  ul {
     list-style: none;
-}
-
-a{
+  }
+  
+  a {
     text-decoration: none;
-}
-
-img{
+  }
+  
+  img {
     display: block;
+    max-width: 100%;
+    height: auto;
+  }
+  
+  /*=============== REUSABLE CSS CLASSES ===============*/
+  .container {
     max-width: 1120px;
-    margin-inline:1.5rem ;
-}
-
-.grid{
+    margin-inline: 1.5rem;
+  }
+  
+  .grid {
     display: grid;
-    gap:1.5rem;
-}
-.section{
+    gap: 1.5rem;
+  }
+  
+  .section {
     padding-block: 5rem 1rem;
-}
-.section__title{
+  }
+  .section__title {
     text-align: center;
     font-size: var(--bigger-font-size);
     margin-bottom: 2rem;
-
-}
-.main{
+  }
+  
+  .main {
     overflow: hidden;
-}
+  }
 
 .header{
     position: fixed;
@@ -195,4 +215,101 @@ img{
 }
 .show-menu{
     top:0;
+}
+.home__container{
+    padding-block: 2rem 3rem;
+    row-gap: 7rem;
+}
+.home__data{
+    position: relative;
+    text-align: center;
+}
+.home__title{
+    font-size: var(--biggest-font-size);
+
+}
+.home__description{
+    margin-block: 1rem 2rem;
+}
+.home__sticker_1,
+.home__sticker_2{
+    width: 40px;
+    position: absolute;
+    opacity: .7;
+}
+
+.home__sticker_1{
+    right: .75rem;
+    bottom: 2rem;
+    rotate: 30deg;
+}
+.home__sticker_2{
+    left: 2.5rem;
+    bottom: -4.5rem;
+}
+.home__images{
+    position: relative;
+    display: grid;
+    justify-items: center;
+    justify-self: center;
+}
+.home_ingredient{
+     width: 60px;
+     filter: var(--shadow-small-img);
+     position: absolute;
+     z-index: 2;
+}
+.home__board,
+.home__pizza{
+    filter: var(--shadow-big-img);
+
+}
+.home__pizza{
+    width: 300px;
+    z-index: 2;
+
+}
+.home__board{
+    width: 300px;
+    position: absolute;
+    bottom: -.5rem;
+    left: -.15rem;
+}
+.home__leaf_1{
+    top:-1rem;
+}
+.home__pepperoni{
+    right:-.5rem;
+    top:2rem;
+}
+.home__mushroom{
+    right:-.5rem;
+    bottom: 2rem;    
+}
+.home__olive{
+    bottom:-1rem;
+
+}
+.home__leaf_2{
+    left:-.5rem;
+    bottom:2rem;
+
+}
+.home__tomato{
+    left:-5rem;
+    top:2rem;
+}
+.button{
+    display: inline-flex;
+    justify-content: center;
+    background-color: var(--first-color);
+    color:var(--white-color);
+    padding: 1rem 1.5rem;
+    font-weight: var(--font-semi-bold);
+    border-radius: 4rem;
+    box-shadow: 0 8px 24px hsla(353, 100%,40%,.4);
+    transition: background-color .4s;
+}
+.button:hover{
+    background-color: var(--first-color-alt);
 }
