--- a/assests/css/styles.css
+++ b/assests/css/styles.css
@@ -216,6 +216,9 @@
 .show-menu{
     top:0;
 }
+.shadow-header{
+  box-shadow: 0 4px 16px hsla(353,100%,8%,.1);
+}
 .home__container{
     padding-block: 2rem 3rem;
     row-gap: 7rem;
@@ -312,4 +315,81 @@
 }
 .button:hover{
     background-color: var(--first-color-alt);
+}
+.about{
+  background-color: var(--container-color);
+}
+
+.about__container{
+  row-gap: 2rem;
+  padding-bottom: 2rem;
+}
+.about__data{
+  position: relative;
+  text-align: center;
+}
+.about__data .section__title{
+  margin-bottom:1rem ;
+}
+.about__description{
+  margin-bottom: 2rem;;
+}
+.about__sticker{
+  width: 40px;
+  position: absolute;
+  right: 0;
+  bottom: 2rem;
+}
+.about__img{
+  width: 320px;
+  justify-content: center;
+  filter: var(--shadow-big-img);
+}
+
+.popular__container{
+grid-template-columns: 100%;
+row-gap: 3rem;
+padding-bottom: 2rem;
+}
+
+.popular__data .section__title{
+  margin-bottom: 1rem;
+}
+
+.popular__description{
+  text-align: center;
+}
+
+.popular__swiper{
+  position: relative;
+}
+
+.popular__dish{
+  width: 220px;
+  filter:var(--shadow-big-img);
+  position: absolute;
+  inset: 0;
+  top:-.85rem;
+  margin-inline: auto;
+}
+.popular__card,
+.popular__image{
+  width:200px;
+}
+.popular__image{
+   transform: scale(.8)rotate(-90deg);
+   transition: transform .4s;
+}
+.popular__title{
+  font-size: var(--h3-font-size);
+  color:var(--first-color);
+  margin-top: 2rem;
+  text-align: center;
+  opacity: 0;
+  transition: opacity .4s;
+}
+
+.swiper{
+  margin-inline: initial;
+  overflow: visible;
 }
