--- a/assests/css/styles.css
+++ b/assests/css/styles.css
@@ -393,3 +393,45 @@ padding-bottom: 2rem;
   margin-inline: initial;
   overflow: visible;
 }
+:is(.swiper-slide-active,.swiper-slide-duplicate-active) .popular__image{
+   transform: scale(1)rotate(0);
+}
+
+:is(.swiper-slide-active,.swiper-slide-duplicate-active) .popular__title{
+  opacity: 1;
+}
+
+.recipe{
+  background-color: var(--container-color);
+}
+
+.recipe-container{
+  row-gap: 2rem;
+  padding-bottom: 2rem;
+}
+
+.recipe__image{
+  width: 60px;
+  filter: var(--shadow-small-img);
+}
+
+.recipe__name{
+  font-size: var(--normal-font-size);
+  margin-bottom: .25rem;
+}
+
+.recipe__description{
+  font-size: var(--small-font-size);
+}
+
+.recipe_ingredient{
+   display: flex;
+   align-items: center;
+   column-gap: .75rem;
+}
+
+.recipe-img{
+  width: 320px;
+  justify-self: center;
+  filter: var(--shadow-big-img);
+}
