--- a/assests/css/styles.css
+++ b/assests/css/styles.css
@@ -435,3 +435,59 @@ padding-bottom: 2rem;
   justify-self: center;
   filter: var(--shadow-big-img);
 }
+
+.products__container{
+  padding-top: 3.5rem;
+  grid-template-columns: repeat(2,1fr);
+  gap:5rem 1.5rem;
+
+}
+
+.products__card{
+  position: relative;
+  background-color: var(--container-color);
+  padding: 5rem .75rem 1.25rem .75rem;
+  border-radius: 1.5rem;
+  box-shadow:0 8 24px hsla(353,100%,8%,.1);
+}
+
+.products__img{
+  width: 120px;
+  position: absolute;
+  top: -3.5rem;
+  left:0;
+  right:0;
+  margin:0 auto;
+  filter:var(--shadow-small-img);
+  transition: transform .4s;
+}
+.products__name{
+  font-size: var(--h3-font-size);
+  margin-bottom: .5rem;
+}
+.products__price{
+  font-family: var(--second-font);
+  font-size: var(--h1-font-size);
+  line-height: 120%;
+  color:var(--first-color);
+}
+.products__button{
+  position: absolute;
+  right:.75rem;
+  bottom: 1.25rem;
+  background-color: var(--first-color);
+  padding: 4px;
+  border-radius: .5rem;
+  font-size: 1.5rem;
+  display: inline-flex;
+  box-shadow: 0 4px 16px hsla(353, 100%, 40%, .4);
+  cursor: pointer;
+  transition: background-color .4s;
+}
+.products__button:hover{
+  background-color: var(--first-color-alt);
+}
+.products__card:hover .products__img{
+  transform: translateY(-.5rem);
+}
+
