--- a/assests/css/styles.css
+++ b/assests/css/styles.css
@@ -490,4 +490,190 @@ padding-bottom: 2rem;
 .products__card:hover .products__img{
   transform: translateY(-.5rem);
 }
+.contact__container{
+  position: relative;
+  background-color: var(--first-color-dark);
+  padding-top: 3.5rem;
+  border-radius: 3rem;
+  overflow: hidden;
+  row-gap: 3rem;
+}
 
+.contact__container .section__title,
+.contact__title,
+.contact__address{
+ color: var(--white-color);
+}
+
+.contact__info{
+  text-align: center;
+  row-gap: 2rem;
+  
+}
+
+.contact__title{
+  margin-bottom: 1rem;
+}
+
+.contact__social{
+  display: flex;
+  justify-content: center;
+  column-gap: 1rem;
+}
+
+.contact__social__link{
+  font-size: 1.5rem;
+  color:var(--first-color);
+  transition: transform .4s;
+}
+
+.contact__social__link:hover{
+  transform: translateY(-.25rem);
+}
+
+.contact__address{
+  font-style: normal;
+}
+
+.contact__map{
+  color: var(--first-color);
+  display: inline-flex;
+  align-items: center;
+  column-gap: .5rem;
+  margin-top: .5rem;
+  font-size: 1rem;
+}
+
+.contact__map span{
+  font-size: var(--small-font-size);
+  font-weight: var(--font-semi-bold);
+}
+
+.contact__image{
+  justify-self: center;
+}
+
+.contact__img{
+  width: 300px;
+}
+
+.contact__sticker-1,
+.contact__sticker-2,
+.contact__sticker-3{
+  width: 40px;
+  position: absolute;
+  opacity: .7;
+}
+
+.contact__sticker-1{
+  top:8rem;
+  left: 1.5rem;
+}
+
+
+.contact__sticker-2{
+  right:1.5rem;
+  bottom:23rem
+}
+
+.contact__sticker-3{
+  left: 2rem;
+  bottom:6rem;
+}
+.footer{
+ padding-block: 4rem 2rem;
+}
+.footer__container,
+.footer__content{
+  row-gap: 3rem;
+}
+.footer_logo{
+  justify-self: center;
+  font-size: var(--h1-font-size);
+  font-family: var(--second-font);
+  color:var(--first-color);
+}
+.footer__title{
+  font-size: var(--h3-font-size);
+  margin-bottom: 1rem;
+
+}
+.footer__form,
+.footer__pay,
+.footer_social{
+  display: flex;
+  column-gap: 1rem;
+}
+
+.footer__social-link{
+  font-size:1.5rem;
+  color:var(--first-color);
+  transition: transform .4s;
+}
+
+.footer__social-link:hover{
+  transform: translateY(-.25rem);
+}
+
+.footer__pay-img{
+  width:30px;
+  filter: var(--shadow-small-img);
+}
+
+.footer__form{
+  padding: .5rem;
+  background-color: var(--container-color);
+  box-shadow: 0 4px 16px hsla(353, 100% , 8%, .1);
+  border-radius: 4rem;
+}
+
+.footer__input{
+  width: 100%;
+  background: transparent;
+  padding-left: .75rem;
+  color:var(--title-color);
+  font-weight: var(--font-semi-bold);
+}
+
+.footer__input::placeholder{
+  color:var(--text-color);
+}
+
+.footer__button{
+  padding-block: .75rem;
+  cursor: pointer;
+}
+
+.footer__policy{
+  display: flex;
+  column-gap: 2rem;
+  justify-content: center;
+  margin-top: 5rem;
+}
+
+.footer__link{
+  font-size: var(--small-font-size);
+  color:var(--text-color);
+}
+
+.footer__copy{
+  display: block;
+  margin-top: 2rem;
+  text-align: center;
+  font-size: var(--small-font-size);
+}
+
+::-webkit-scrollbar{
+  width: .6rem;
+  background-color: hsl(24, 32%, 75%);
+}
+
+::-webkit-scrollbar-thumb{
+  width: .6rem;
+  background-color: hsl(24, 32%, 65%);
+}
+
+::-webkit-scrollbar-thumb:hover{
+  width: .6rem;
+  background-color: hsl(24, 32%, 55%);
+}
