--- a/assests/css/styles.css
+++ b/assests/css/styles.css
@@ -195,7 +195,7 @@
 
 .nav__link::after{
     content:'';
-    width:0;
+    width:100%;
     height:3px;
     background-color: var(--first-color);
     position: absolute;
@@ -218,6 +218,9 @@
 }
 .shadow-header{
   box-shadow: 0 4px 16px hsla(353,100%,8%,.1);
+}
+.active-link::after{
+   width:60%
 }
 .home__container{
     padding-block: 2rem 3rem;
@@ -256,7 +259,7 @@
     justify-items: center;
     justify-self: center;
 }
-.home_ingredient{
+.home__ingredient{
      width: 60px;
      filter: var(--shadow-small-img);
      position: absolute;
@@ -405,7 +408,7 @@ padding-bottom: 2rem;
   background-color: var(--container-color);
 }
 
-.recipe-container{
+.recipe__container{
   row-gap: 2rem;
   padding-bottom: 2rem;
 }
@@ -424,26 +427,26 @@ padding-bottom: 2rem;
   font-size: var(--small-font-size);
 }
 
-.recipe_ingredient{
+.recipe__ingredient{
    display: flex;
    align-items: center;
    column-gap: .75rem;
 }
 
-.recipe-img{
+.recipe__img{
   width: 320px;
   justify-self: center;
   filter: var(--shadow-big-img);
 }
 
-.products__container{
+.product__container{
   padding-top: 3.5rem;
   grid-template-columns: repeat(2,1fr);
   gap:5rem 1.5rem;
 
 }
 
-.products__card{
+.product__card{
   position: relative;
   background-color: var(--container-color);
   padding: 5rem .75rem 1.25rem .75rem;
@@ -451,7 +454,7 @@ padding-bottom: 2rem;
   box-shadow:0 8 24px hsla(353,100%,8%,.1);
 }
 
-.products__img{
+.product__img{
   width: 120px;
   position: absolute;
   top: -3.5rem;
@@ -461,17 +464,17 @@ padding-bottom: 2rem;
   filter:var(--shadow-small-img);
   transition: transform .4s;
 }
-.products__name{
+.product__name{
   font-size: var(--h3-font-size);
   margin-bottom: .5rem;
 }
-.products__price{
+.product__price{
   font-family: var(--second-font);
   font-size: var(--h1-font-size);
   line-height: 120%;
   color:var(--first-color);
 }
-.products__button{
+.product__button{
   position: absolute;
   right:.75rem;
   bottom: 1.25rem;
@@ -484,10 +487,10 @@ padding-bottom: 2rem;
   cursor: pointer;
   transition: background-color .4s;
 }
-.products__button:hover{
+.product__button:hover{
   background-color: var(--first-color-alt);
 }
-.products__card:hover .products__img{
+.product__card:hover .product__img{
   transform: translateY(-.5rem);
 }
 .contact__container{
@@ -557,26 +560,26 @@ padding-bottom: 2rem;
   width: 300px;
 }
 
-.contact__sticker-1,
-.contact__sticker-2,
-.contact__sticker-3{
+.contact__sticker_1,
+.contact__sticker_2,
+.contact__sticker_3{
   width: 40px;
   position: absolute;
   opacity: .7;
 }
 
-.contact__sticker-1{
+.contact__sticker_1{
   top:8rem;
   left: 1.5rem;
 }
 
 
-.contact__sticker-2{
+.contact__sticker_2{
   right:1.5rem;
   bottom:23rem
 }
 
-.contact__sticker-3{
+.contact__sticker_3{
   left: 2rem;
   bottom:6rem;
 }
@@ -587,7 +590,7 @@ padding-bottom: 2rem;
 .footer__content{
   row-gap: 3rem;
 }
-.footer_logo{
+.footer__logo{
   justify-self: center;
   font-size: var(--h1-font-size);
   font-family: var(--second-font);
@@ -600,7 +603,7 @@ padding-bottom: 2rem;
 }
 .footer__form,
 .footer__pay,
-.footer_social{
+.footer__social{
   display: flex;
   column-gap: 1rem;
 }
@@ -615,7 +618,7 @@ padding-bottom: 2rem;
   transform: translateY(-.25rem);
 }
 
-.footer__pay-img{
+.footer__pay_image{
   width:30px;
   filter: var(--shadow-small-img);
 }
@@ -676,4 +679,340 @@ padding-bottom: 2rem;
 ::-webkit-scrollbar-thumb:hover{
   width: .6rem;
   background-color: hsl(24, 32%, 55%);
+}
+
+.scrollup{
+  position: fixed;
+  right: 1rem;
+  bottom: -50%;
+  background-color: var(--body-color);
+  box-shadow: 0 4px 16px hsla(353, 100% , 8%, .2);
+  color:var(--title-color);
+  display: inline-flex;
+  padding: 6px;
+  font-size: 1.25rem;
+  border-radius: .5rem;
+  z-index: var(--z-tooltip);
+  transition: transform .4s;
+}
+
+.scrollup:hover{
+  transform: translateY(-.5rem);
+}
+
+.show-scroll{
+  bottom: 3rem;
+}
+
+
+@media screen and (max-width: 320px){
+  .container{
+    margin-inline:1rem ;
+  }
+
+  .products__container{
+    grid-template-columns: 150px;
+    justify-content: center;
+  }
+  .footer__form{
+    background: transparent;
+    box-shadow: none;
+    flex-direction: column;
+    row-gap: 1rem;
+    padding: 0;
+  }
+  .footer__input{
+    background-color: var(--container-color);
+    box-shadow: 0 4px 16px hsla(353, 100% , 8%, .1);
+    padding: .75rem 1rem;
+    border-radius:4rem;
+  }
+}
+
+@media screen and (min-width:576px){
+  .home__container,
+  .about__container,
+  .popular__container,
+  .recipe-container{
+    grid-template-columns:380px;
+    justify-content:center;
+
+  }
+  .products__container{
+    grid-template-columns: repeat(2,160px);
+    justify-content:center;
+  }
+  .contact__container{
+    width: 450px;
+    margin-inline:auto;
+  }
+  .footr__form{
+    width: 360px;
+  }
+}
+
+@media screen and (min-width:768px){
+  .popular-swiper{
+    width: 600px;
+    overflow-x: clip;
+    justify-content: center;
+  }
+  .popular__container{
+    grid-template-columns: repeat(3,160px);
+  }
+
+  .footer__content{
+    grid-template-columns: repeat(2,lfr);
+    justify-content: center;
+  }
+
+  .footer__content div:nth-child(3){
+    grid-column: i/3;
+  }
+
+  .footer__title{
+    text-align: center;
+  }
+
+  .footer__social,
+  .footer__pay{
+    column-gap:1.5rem;
+  }
+}
+
+@media screen and (min-width:1150px) {
+  .container{
+    margin-inline:auto;
+
+  }
+  .section{
+    padding-block: 7rem 2rem;
+  }
+  .section__title{
+    margin-bottom: 4rem;
+  }
+  .nav{
+    height: calc(var(--header-height)+2rem);
+  }
+  .nav__close,
+  .nav__toggle{
+    display: none;
+  }
+
+  .nav__list{
+    flex-direction: row;
+    column-gap: 4rem;
+  }
+  .home__container{
+    grid-template-columns: 515px 555px;
+    column-gap: 3rem;
+    align-items: start;
+    padding-block: 10rem 4rem;
+  }
+  .home__data{
+    text-align: initial;
+    margin-top: 2rem;
+  }
+  .home__description{
+    margin-bottom: 3.5rem;
+    padding-right: 6rem;
+  }
+  .home__sticker_1,
+  .home__sticker_2{
+    width: 50px;
+  }
+  .home__sticker_1{
+    right: 3rem;
+    top:1rem;
+    bottom: 0;
+  }
+  .home__sticker_2{
+    left: 16rem;
+    bottom: 3rem;
+  }
+  .home__board,
+  .home__pizza{
+    width: 520px;
+  }
+  .home__board{
+    bottom: -1rem;
+  }
+  .home__ingredient{
+    width: 100px;
+  }
+  .home__leaf_1{
+    top:-2rem
+  }
+  .home__pepperoni{
+    right:-1rem;
+    top:3.5rem;
+
+  }
+  .home__mushroom{
+    right:-1rem;
+    bottom: 3.5rem;
+  }
+  .home__olive{
+    bottom:-2rem
+  }
+  .home__leaf_2{
+    left: -1rem;
+    bottom:3.5rem;
+  }
+  .home__tomato{
+    left: -1rem;
+    top:3.5rem;
+  }
+  .about__container{
+    grid-template-columns: 450px 440px;
+    align-items: center;
+    column-gap: 6rem;
+  }
+  .about__img{
+    order:-1;
+    width: 450px;
+  }
+  .about__data{
+    text-align: initial;
+  }
+  .about__data,.section__title{
+    margin-bottom: 1.5rem;
+    text-align: initial;
+  }
+  .about__description{
+    margin-bottom: 3.5rem;
+  }
+  .about__sticker{
+    width:50px;
+    right: 6rem;
+    bottom: 4rem;
+  }
+  .popular__container{
+    grid-template-columns: 470px;
+    row-gap: 5rem;
+    padding-bottom: 3rem;
+  }
+  .popular__data .section__title{
+   margin-bottom: 1.5rem;
+  }
+  .popular-swiper{
+    width:1000px;
+
+  }
+  .popular__card,
+  .popular__image{
+    width: 350px;
+  }
+  .popular__dish{
+    width: 390px;
+    top:-1.5rem
+  }
+  .popular__title{
+    margin-top: 3rem;
+    font-size: var(--h2-font-size);
+  }
+  .recipe__container{
+    grid-template-columns: 360px 550px;
+    align-items: center;
+    column-gap: 6rem;
+    padding-bottom:3rem;
+  }
+  .recipe__ingredient{
+    column-gap: 1.5rem;
+  }
+  .recipe__image{
+    width:80px;
+  }
+  .recipe__name{
+    font-size: var(--h3-font-size);
+
+  }
+  .recipe__description{
+    font-size: var(--normal-font-size);
+  }
+  .recipe__img{
+    width: 550px;
+  }
+  .product__container{
+    grid-template-columns: repeat(3, 250px);
+    gap: 7.5rem 4rem;
+  }
+  .product__card{
+    padding:10rem 1.5rem 1.5rem;
+  }
+  .product__img{
+    width: 200px;
+    top:-4rem;
+  }
+  .product__name{
+    font-size: var(--h2-font-size);
+  }
+  .product__button{
+    right: 1.5rem;
+    bottom: 1.5rem;
+    padding: 6px;
+  }
+  .contact__container{
+     width:initial;
+     grid-template-columns: 370px 350px;
+     justify-content:center ;
+     column-gap: 6rem;
+     border-radius: 4rem;
+  }
+  .contact__image{
+    order:-1;
+  }
+  .contact__img{
+    width: 350px;
+  }
+  .contact__info,
+  .contact__data,
+  .section__title{
+    text-align: center;
+  }
+  .contact__data{
+    margin-top: 2rem;
+  }
+  .contact__info{
+    grid-template-columns: repeat(2, max-content);
+  }
+  .contact__title{
+    font-size: var(--h2-font-size);
+  }
+  .contact__sticker_1,
+  .contact__sticker_2,
+  .contact__sticker_3{
+    width:50px;
+  }
+  .contact__sticker_1{
+    left:4rem;
+  }
+  .contact__sticker_2{
+    right:4rem;
+    top:8rem;
+    bottom:0;
+  }
+  .contact__sticker_3{
+    left:10rem;
+    bottom:4rem;
+  }
+  .footer{
+    padding-bottom: 3rem;
+  }
+  .footer__content{
+    grid-template-columns: repeat(3,1fr);
+  }
+  .footer__content div:nth-child(3){
+    grid-column: initial;
+  }
+  .footer__content div:nth-child(2){
+    order:1;
+    justify-self: end;
+  }
+  .foooter__content div:nth-child(1){
+    justify-self: start;
+  }
+  .scrollup{
+    right:3rem
+  }
 }
