--- a/assests/css/styles.css
+++ b/assests/css/styles.css
@@ -302,7 +302,7 @@
 
 }
 .home__tomato{
-    left:-5rem;
+    left:-.5rem;
     top:2rem;
 }
 .button{
@@ -710,7 +710,7 @@ padding-bottom: 2rem;
     margin-inline:1rem ;
   }
 
-  .products__container{
+  .product__container{
     grid-template-columns: 150px;
     justify-content: center;
   }
@@ -733,12 +733,12 @@ padding-bottom: 2rem;
   .home__container,
   .about__container,
   .popular__container,
-  .recipe-container{
+  .recipe__container{
     grid-template-columns:380px;
     justify-content:center;
 
   }
-  .products__container{
+  .product__container{
     grid-template-columns: repeat(2,160px);
     justify-content:center;
   }
@@ -746,7 +746,7 @@ padding-bottom: 2rem;
     width: 450px;
     margin-inline:auto;
   }
-  .footr__form{
+  .footer__form{
     width: 360px;
   }
 }
@@ -767,7 +767,7 @@ padding-bottom: 2rem;
   }
 
   .footer__content div:nth-child(3){
-    grid-column: i/3;
+    grid-column: 1/3;
   }
 
   .footer__title{
@@ -1009,10 +1009,24 @@ padding-bottom: 2rem;
     order:1;
     justify-self: end;
   }
-  .foooter__content div:nth-child(1){
+  .footer__content div:nth-child(1){
     justify-self: start;
   }
-  .scrollup{
-    right:3rem
-  }
+  .scrollup {
+    position: fixed;
+    right: 1rem;
+    bottom: 1rem;
+    background-color: var(--body-color);
+    box-shadow: 0 4px 16px hsla(353, 100%, 8%, .1);
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: bottom 0.4s;
+}
+
+.scrollup:hover {
+    background-color: var(--first-color-alt);
+}
+
 }
